Run the certifier during CI
**What**
- Use KinD to install openfaas-operator via the current helm chart
- Clone and run the certifier

Signed-off-by: Lucas Roesler <roesler.lucas@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,14 @@ addons:
 install:
   - echo "Please don't go get"
 
+before_script:
+  - bash contrib/set_travis_experimental_features.sh
+
 script:
   - make test
   - make verify-codegen
   - make build
+  - make ci-certify
 
 after_success:
   - if [ ! -s "$TRAVIS_TAG" ] ; then
